# nicegui-scanner-app

./: .flake8  .gitignore  CLAUDE.md  LICENSE  Makefile  copy_zxing.py  package-lock.json  package.json  pyproject.toml  readme.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
examples/: app.py  page_example.py  pages.py
src/nicegui_scanner/: __init__.py  app.py  barcode_scanner.vue  demo.py  scanner.py
work/: backlog.md  definition-of-done.md  doing.md  error-handling-tests.md
